app/bin/test/programs/invalid/conditionals/mismachedTypesInNestedConditionals.exe
// Mismatched types in nested conditionals
foo main() -> Int = {
    if true then {
        if false then 1 else ()
    } else {
        2
    }
}
